--- a/package.json
+++ b/package.json
@@ -9,12 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.5.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@closet-design-system/core-connect": "^0.13.0",
+    "@closet-design-system/theme-connect": "^0.2.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "i": "^0.3.7",
+    "next": "^12.3.4",
+    "npm": "^9.8.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3"
   },
   "devDependencies": {
-    "eslint": "8.50.0",
-    "eslint-config-next": "13.5.4"
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@emotion/babel-plugin": "^11.11.0",
+    "@types/node": "^20.5.1",
+    "@types/react": "^18.2.20",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.47.0",
+    "eslint-config-next": "13.4.19",
+    "typescript": "^5.2.2",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
