--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@closet-design-system/core-connect": "^0.13.0",
+    "@closet-design-system/core-plm": "^0.17.0",
     "@closet-design-system/theme-connect": "^0.2.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -21,6 +22,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "i": "^0.3.7",
     "next": "^12.3.4",
+    "next-redux-wrapper": "^8.1.0",
     "npm": "^9.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
